# ansible

./: README.md  pyproject.toml
.github/linters/: .ansible-lint  .ansible-lint.yml
.github/workflows/: linter.yml
ansible/: README.md  pyproject.toml
ansible/inventories/: digitalocean
ansible/playbooks/: digital-ocean-setup.yml  minecraft-server.yml  satisfacory-server.yml  valheim-server.yml  webserver-setup.yml
ansible/roles/better-ssh/handlers/: main.yml
ansible/roles/better-ssh/tasks/: main.yml
ansible/roles/digital-ocean-setup/handlers/: main.yml
ansible/roles/digital-ocean-setup/tasks/: main.yml
ansible/roles/digital-ocean-setup/vars/: main.yml
ansible/roles/digital_ocean_setup/tasks/: main.yml
ansible/roles/minecraft-dedicated-server/: README.md
ansible/roles/minecraft-dedicated-server/files/: minecraft-up.sh.j2  minecraft.cron.j2  mscs.properties.j2
ansible/roles/minecraft-dedicated-server/tasks/: main.yml
ansible/roles/minecraft-dedicated-server/vars/: main.yml
ansible/roles/minecraft_dedicated_server/: README.md
ansible/roles/minecraft_dedicated_server/files/: minecraft-up.sh.j2  minecraft.cron.j2  minecraft.nginx.conf.j2  mscs.properties.j2
ansible/roles/minecraft_dedicated_server/handlers/: main.yml
ansible/roles/satisfactory_dedicated_server/: README.md
ansible/roles/valheim-dedicated-server/: README.md
ansible/tasks/: minecraft-ufw-rules.yml  satisfactory-ufw-rules.yml  valheim-ufw-rules.yml  webserver-ufw-rules.yml
satisfactory-docker/: Dockerfile  docker-compose.yml
(+22 files in other folders)
