[tool.poetry]
name = "satisfactory"
version = "0.1.0"
description = ""
authors = ["Colwyn Fritze-Moor <colwyn@colwyn.me>"]

[tool.poetry.dependencies]
python = "^3.8"
ansible = "^4.8.0"
ansible-lint = "^5.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
